--- a/.github/workflows/azure-deploy-linux.yml
+++ b/.github/workflows/azure-deploy-linux.yml
@@ -1,5 +1,4 @@
 # Azure App Service Deployment (Linux)
-# Simpler deployment for Linux App Service
 
 name: Deploy to Azure
 
@@ -47,6 +46,6 @@ jobs:
       - name: Deploy to Azure
         uses: azure/webapps-deploy@v3
         with:
-          app-name: ${{ vars.AZURE_APP_NAME }}
+          app-name: ${{ env.AZURE_APP_NAME }}
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: release.zip
